made some visible progress, buttons are now added on click in a position. Just need to now work out how to position these correctly based off client screen and box coords

--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,9 @@
   width: 1000px;
   height: 1000px
 }
+
+.click_buttons {
+  background-color: brown;
+  height: 100px;
+  width: 100px;
+}
